Thu Oct 19 23:47:01 2000  David Helder  <dhelder@umich.edu>

	* configure.in (GNET_BINARY_AGE): Minor = 5, interface = 0

Thu Oct 19 23:44:17 2000  David Helder  <dhelder@umich.edu>

	* *: Merged GNET_1_0_4_STABLE_BRANCH into HEAD

Thu Oct 19 22:48:21 2000  David Helder  <dhelder@umich.edu>

	* *: Release 1.0.4 on GNET_1_0_4_STABLE_BRANCH branch

	* README.win32: Updates

	* gnet-config.in (lib_gnet): Fix gnet-config.in
	
Sat Oct 14 11:54:30 2000  David Helder  <dhelder@umich.edu>

	* gnet-config.in (lib_gnet): Fixed cflags for non-/usr prefix
	    systems.
	* NEWS: Updates (still unreleased)
	
Wed Oct 11 23:31:40 2000  David Helder  <dhelder@umich.edu>

	* TODO: Updates.

Wed Oct 11 23:18:04 2000  David Helder  <dhelder@umich.edu>

	* examples/pack.c: Added
	* examples/hash.c: Added

Wed Oct 11 23:16:48 2000  David Helder  <dhelder@umich.edu>

	* src/scheduler.[hc]: Added, but not used yet.
	
	* src/md5.[hc]: Added
	* src/sha.[hc]: Added

	* src/gnet.h: Added md5 and sha

Wed Oct 11 22:57:18 2000  David Helder  <dhelder@umich.edu>

	* src/iochannel.[hc]: Moved functions in gnet.h here
	* src/iochannel.c ({read,write}_async): Added

	* src/pack.[hc]: Added.  Mostly finished.  Needs testing, more
	   docs.

	* src/conn.[hc]: Added.  Needs review, docs.
	* src/server.[hc]: Added.  Needs review, docs.
	
	* src/url.[hc]: Added.  Very basic, not standards compliant.
	   Needs work.
	
	* src/inetaddr.c (gnet_inetaddr_new_nonblock): Added
	* src/inetaddr.c (gnet_inetaddr_is_*): Added
	
	* src/inetaddr.c (gnet_inetaddr_autodetect_internet_interface): Added
	* src/inetaddr.c (gnet_inetaddr_get_interface_to): "
	* src/inetaddr.c (gnet_inetaddr_get_internet_interface): "
	* src/inetaddr.c (gnet_inetaddr_is_internet_domainname): "

	* src/inetaddr.c,gnet-private.c (gnet_inetaddr_list_interfaces):
	    Moved from private to inetaddr and exposed.
	
	* src/tcp.c (gnet_tcp_socket_set_tos): Added
	* src/tcp.c (gnet_tcp_socket_server_new2): Added.  This