@@ -1,3 +1,8 @@
+Fri Oct 20 11:27:08 2000  David Helder  <dhelder@umich.edu>
+
+	* src/*.[ch]: Added Copyright line for Andy to files
+	    he changed/added to.
+
 Thu Oct 19 23:47:01 2000  David Helder  <dhelder@umich.edu>
 
 	* configure.in (GNET_BINARY_AGE): Minor = 5, interface = 0
